# ExamBot

./: .env.example  README.md  config.toml  main.py  pyproject.toml
assets/: questions.toml
cogs/: help.py  managment.py  quiz.py  quotes.py  singlequestion.py
