[tool.poetry]
name = "exambot"
version = "0.1.0"
description = "A Discord bot that helps practising for exams"
authors = ["GearKite <emgh@em.id.lv>"]
license = "AGPL-v3-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.1"
coloredlogs = "^15.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = ["missing-function-docstring", "missing-module-docstring"]

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
